Added style and icon

--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temperature in different cities</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Elsie:wght@400;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/styles/style.css">
+    <link rel="shortcut icon" href="https://cdn-icons-png.freepik.com/256/2100/2100100.png?ga=GA1.1.883863619.1701899872&">
 </head>
-<body>
-    <head>
-        <h1>Temperature in different cities</h1>
+<body class="body">
+    <head class="header">
+        <h1 class="h1">Temperature in different cities</h1>
     </head>
-    <section>
-        <ul id="temperature-list"></ul>
+    <section class="section">
+        <ul id="temperature-list" class="list"></ul>
     </section>
 <script src="assets/script/index.js"></script>
 </body>
